error deletetest